--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/Level.Level
+EditorStartupMap=/Game/Maps/Level.Level
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
