Add main menu system with widgets and HUD

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/World.World
+GameDefaultMap=/Game/Maps/Menu.Menu
 EditorStartupMap=/Game/Maps/World.World
 
 [/Script/Engine.RendererSettings]
