Add FPSGameState and FPSGameInstance classes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Menu.Menu
 EditorStartupMap=/Game/Maps/World.World
+GameInstanceClass=/Script/VGP221_A1.FPSGameInstance
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
