Add Lander vehicle class with thruster controls

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -88,6 +88,11 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Look Horizontal",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Look Vertical",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="Zoom",Scale=1.000000,Key=MouseWheelAxis)
++AxisMappings=(AxisName="Pitch",Scale=-1.000000,Key=W)
++AxisMappings=(AxisName="Roll",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="Thruster Up",Scale=1.000000,Key=SpaceBar)
++AxisMappings=(AxisName="Pitch",Scale=1.000000,Key=S)
++AxisMappings=(AxisName="Roll",Scale=-1.000000,Key=D)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
