Add maps to packaging settings

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,3 +4,7 @@ CommonButtonAcceptKeyHandling=TriggerClick
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2565850C4FF9B61EAAA929B310A1474D
+
+[/Script/UnrealEd.ProjectPackagingSettings]
++MapsToCook=(FilePath="/Game/Maps/Menu")
++MapsToCook=(FilePath="/Game/Maps/World")
